--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,38 @@
+mousam (1.3.2) stable; urgency=medium
+
+  [ Tobias Bernard ]
+  * Add appstream brand colors (#134)
+
+  [ Adrian Baumgart ]
+  * fixed 24-hour format not working for sunrise/sunset (#137)
+
+  [ Himadri Sekhar Basu ]
+  * Bump debian changelog file to version 1.3.1 (#141)
+
+  [ Scrambled777 ]
+  * Hindi translation update (#144)
+    Minor update for Hindi translation.
+
+  [ Tobias Bernard ]
+  * app icon: various tweaks and improvements (#146)
+
+  [ Amit Chaudhary ]
+  * fix typo
+  * fix typo
+  * fix and simplify sun rotation
+  * Release_v1.3.2
+  * Release_v1.3.2
+
+  [ Scrambled777 ]
+  * Hindi translation update (#148)
+    * Hindi translation update
+    Minor update for updated strings.
+    Cheers.
+    * Update hi.po
+    Fixes to include input from @amit9838
+
+ -- Himadri Sekhar Basu <hsb10@iitbbs.ac.in>  Mon, 01 Jul 2024 23:38:44 +0530
+
 mousam (1.3.1) stable; urgency=medium
 
   [ Amit Chaudhary ]
