--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PAKETVERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
 "PO-Revision-Date: JAHR-MO-TA ST:MI+ZONE\n"
 "Last-Translator: VOLLSTÄNDIGER NAME <EMAIL@ADRESSE>\n"
 "Language-Team: SPRACHE <LL@li.org>\n"
@@ -71,7 +71,7 @@ msgid "Clear Sky - day"
 msgstr "Klarer Himmel - imperial"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -134,7 +134,7 @@ msgstr "Starten Sie die App im maximierten Modus."
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
 #, fuzzy
-msgid "Mesaurement sysytem to use - metric,imperial"
+msgid "Measurement system to use - metric,imperial"
 msgstr "Zu verwendendes Maßsystem - metrisch, imperial"
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
