--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
 "PO-Revision-Date: 2023-06-18 11:17+0300\n"
 "Last-Translator: Radical4ever\n"
 "Language-Team: \n"
@@ -71,7 +71,7 @@ msgid "Clear Sky - day"
 msgstr "Cielo despejado - imperial"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -134,7 +134,8 @@ msgid "Launch the app in maximized mode."
 msgstr "Iniciar la app en modo pantalla completa."
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
-msgid "Mesaurement sysytem to use - metric,imperial"
+#, fuzzy
+msgid "Measurement system to use - metric,imperial"
 msgstr "Sistemas de medicion a usar - metrico,imperial"
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
