--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
 "PO-Revision-Date: 2024-05-22 10:47+0200\n"
 "Last-Translator: Lalung Nicolas-Zhuang <contact@wasab.dev>\n"
 "Language-Team: French <LL@li.org>\n"
@@ -72,7 +72,7 @@ msgid "Clear Sky - day"
 msgstr "Ciel dégagé - impérial"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -135,7 +135,8 @@ msgid "Launch the app in maximized mode."
 msgstr "Lancer l'application en mode maximisé."
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
-msgid "Mesaurement sysytem to use - metric,imperial"
+#, fuzzy
+msgid "Measurement system to use - metric,imperial"
 msgstr "Système d'unités à utiliser - métrique,impérial"
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
