--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: unnamed project\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
 "PO-Revision-Date: 2024-08-18 22:19+0200\n"
 "Last-Translator: Neko the gamer\n"
 "Language-Team: \n"
@@ -71,7 +71,7 @@ msgid "Clear Sky - day"
 msgstr "Cielo sereno - imperiale"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -134,7 +134,8 @@ msgid "Launch the app in maximized mode."
 msgstr "Avvia l'app in modalità massimizzata."
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
-msgid "Mesaurement sysytem to use - metric,imperial"
+#, fuzzy
+msgid "Measurement system to use - metric,imperial"
 msgstr "Sistema di misura da usare - metrico,imperiale"
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
