--- a/po/mousam.pot
+++ b/po/mousam.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -65,7 +65,7 @@ msgid "Clear Sky - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -123,7 +123,7 @@ msgid "Launch the app in maximized mode."
 msgstr ""
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
-msgid "Mesaurement sysytem to use - metric,imperial"
+msgid "Measurement system to use - metric,imperial"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
