--- a/po/pl.po
+++ b/po/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
 "PO-Revision-Date: 2024-03-10 11:53+0100\n"
 "Last-Translator: Łukasz Horodecki <dakilla@gmail.com>\n"
 "Language-Team: Polish <>\n"
@@ -73,7 +73,7 @@ msgid "Clear Sky - day"
 msgstr "Czyste niebo – jednostki imperialne"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -132,7 +132,8 @@ msgid "Launch the app in maximized mode."
 msgstr "Uruchamiaj aplikację w trybie zmaksymalizowanym"
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
-msgid "Mesaurement sysytem to use - metric,imperial"
+#, fuzzy
+msgid "Measurement system to use - metric,imperial"
 msgstr "Stosowany system miat – mietryczny, imperialny"
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
