--- a/po/uk.po
+++ b/po/uk.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ПАКЕТ ВЕРСІЯ\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
 "PO-Revision-Date: 2024-05-13 14:31+0530\n"
 "Last-Translator: Bezruchenko Simon <worcposj44@gmail.com>\n"
 "Language-Team: Ukrainian <LL@li.org>\n"
@@ -72,7 +72,7 @@ msgid "Clear Sky - day"
 msgstr "Ясне небо - імперське"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr ""
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -132,7 +132,8 @@ msgid "Launch the app in maximized mode."
 msgstr "Запустіть додаток у розгорнутому режимі."
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
-msgid "Mesaurement sysytem to use - metric,imperial"
+#, fuzzy
+msgid "Measurement system to use - metric,imperial"
 msgstr "Система вимірювання - метрична, імперська"
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
