--- a/po/hu.po
+++ b/po/hu.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mousam\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-08 13:17+0700\n"
-"PO-Revision-Date: 2025-01-17 06:24+0100\n"
+"POT-Creation-Date: 2025-01-17 16:58+0530\n"
+"PO-Revision-Date: 2025-01-17 14:11+0100\n"
 "Last-Translator: Kónya Márton <konyamarci52@proton.me>\n"
 "Language-Team: \n"
 "Language: hu\n"
@@ -72,7 +72,7 @@ msgid "Clear Sky - day"
 msgstr "Tiszta Égbolt - nappal"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:25
-msgid "Snofall - day"
+msgid "Snowfall - day"
 msgstr "Hőesés - nappal"
 
 #: data/io.github.amit9838.mousam.appdata.xml.in:29
@@ -132,7 +132,7 @@ msgid "Launch the app in maximized mode."
 msgstr "Induljon teljes képernyős módban."
 
 #: data/io.github.amit9838.mousam.gschema.xml:42
-msgid "Mesaurement sysytem to use - metric,imperial"
+msgid "Measurement system to use - metric,imperial"
 msgstr "Mértékegységrendszer - metrikus, angolszász"
 
 #: data/io.github.amit9838.mousam.gschema.xml:43
