--- a/po/de.po
+++ b/po/de.po
@@ -2,19 +2,22 @@
 # Copyright (C) JAHR DES URHEBERRECHTSINHABERS DES PAKETS
 # Diese Datei wird unter der gleichen Lizenz wie das PAKET-Paket verteilt.
 # ERSTER AUTOR <EMAIL@ADRESSE>, JAHR.
+# Jonas Harer <jonas.harer@icloud.com>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PAKETVERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-01-17 16:58+0530\n"
-"PO-Revision-Date: JAHR-MO-TA ST:MI+ZONE\n"
-"Last-Translator: VOLLSTÄNDIGER NAME <EMAIL@ADRESSE>\n"
-"Language-Team: SPRACHE <LL@li.org>\n"
+"PO-Revision-Date: 2025-05-27 14:08+0200\n"
+"Last-Translator: Jonas Harer <jonas.harer@icloud.com>\n"
+"Language-Team: German\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Gtranslator 48.0\n"
 
 #: data/io.github.amit9838.mousam.desktop.in:3
 #: data/io.github.amit9838.mousam.appdata.xml.in:6
@@ -405,7 +408,7 @@ msgstr "Über Mousam"
 
 #: src/mousam.py:98 src/shortcutsDialog.ui:57
 msgid "Quit"
-msgstr ""
+msgstr "Beenden"
 
 #: src/mousam.py:153
 msgid "Getting Weather Data"
@@ -663,7 +666,7 @@ msgstr ""
 
 #: src/windowPreferences.py:50
 msgid "Time Format"
-msgstr ""
+msgstr "Zeitformat"
 
 #: src/windowPreferences.py:51
 #, fuzzy
@@ -730,7 +733,7 @@ msgstr ""
 
 #: src/shortcutsDialog.ui:33
 msgid "Refresh Weather"
-msgstr ""
+msgstr "Wetter aktualisieren"
 
 #: src/shortcutsDialog.ui:53
 msgid "Navigation"
