--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -211,7 +211,7 @@ msgstr "大雪"
 
 #: src/constants.py:151
 msgid "Snow grains"
-msgstr "粒雪"
+msgstr "米雪"
 
 #: src/constants.py:152
 msgid "Light Rain Showers"
@@ -400,7 +400,7 @@ msgstr "正在获取天气数据"
 #: src/mousam.py:178
 #, fuzzy
 msgid "Welcome to Mousam"
-msgstr "关于Mousam"
+msgstr "欢迎使用Mousam"
 
 #: src/mousam.py:198
 msgid "No Internet"
@@ -444,7 +444,7 @@ msgstr "低"
 
 #: src/mousam.py:373
 msgid "Switched to {}"
-msgstr "已切換至 {}"
+msgstr "已切换至 {}"
 
 #: src/mousam.py:376
 msgid "Refreshed Successfully"
@@ -697,7 +697,7 @@ msgstr "已切换至 - {}"
 
 #: src/shortcutsDialog.ui:29
 msgid "General"
-msgstr "一般"
+msgstr "通用"
 
 #: src/shortcutsDialog.ui:33
 msgid "Refresh Weather"
@@ -723,4 +723,4 @@ msgstr "导览"
 #~ msgstr "降水量"
 
 #~ msgid "Add more locations to delete!"
-#~ msgstr "添加更多位置以刪除！"
+#~ msgstr "添加更多位置以删除！"
